fixed elements positions to prevent overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -63,16 +63,14 @@ canvas {
 }
 
 .game-over {
-  position: absolute;
   width: 100%;
   height: 100%;
   background-color: black;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 15px;
-  visibility: hidden;
 }
 
 .game-over p {
@@ -83,7 +81,7 @@ canvas {
   font-size: 3em;
 }
 
-.game-over button {
+button {
   font-size: 1.5em;
 }
 
